# Parallel-Manipulator-Stewart-Platform-

./: README.md
log/: latest_list
src/stewart_platform/: CMakeLists.txt  package.xml
src/stewart_platform/aruco_visual_marker_fractal/: model.config  model.sdf
src/stewart_platform/aruco_visual_marker_fractal/materials/scripts/: aruco_visual_marker_fractal.material
src/stewart_platform/config/: control_stewart.yaml
src/stewart_platform/launch/: onlystewart.launch.py  stewart.launch  stewart.launch.py  stewart_ardupilot.launch.py
src/stewart_platform/plugin/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/stewart_platform/plugin/atomic_configure/: .rosinstall  local_setup.sh  setup.sh
src/stewart_platform/plugin/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/stewart_platform/plugin/catkin_generated/installspace/: stewart_platform.pc  stewart_platformConfig.cmake
src/stewart_platform/plugin/catkin_generated/stamps/stewart_platform/: _setup_util.py.stamp
src/stewart_platform/plugin/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/stewart_platform/plugin/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/stewart_platform/plugin/gtest/googletest/: CTestTestfile.cmake  Makefile
src/stewart_platform/scripts/: controller_platform_ros2.py
src/stewart_platform/src/: controller_platform.py  controller_platform_ros2.py  ik.cpp
src/stewart_platform/src/plugins/: joint_controller.cpp
src/stewart_platform/stewart/: model.config  stewart.sdf
src/stewart_platform/stewart_sdf_model/: model.config  stewart_fractal.sdf  stewart_sdf.sdf  stewart_sdf_generator.py  stewart_sdf_new.sdf
src/stewart_platform/world/: stewart.world
