<?xml version="1.0"?>
<package format="3">
  <name>stewart_platform</name>
  <version>0.1.0</version>
  <description>
    Stewart platform Gazebo assets, controllers, and ROS 2 nodes used for simulation and control.
  </description>
  <maintainer email="yadavari@itu.edu.tr">Hadi Yada</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo</depend>
  <depend>Eigen3</depend>
  <depend>eigen3_cmake_module</depend>

  <exec_depend>launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
